--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <!--<link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="/assets/css/sss.css" />-->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2H5J1DJPHR"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-2H5J1DJPHR');
+    </script>
 	</head>
 	<body class="is-preload">
 
